community/qt5-qtkeychain: depend on dbus:org.freedesktop.Secrets
This way a secret manager is pulled in

--- a/community/qt5-qtkeychain/APKBUILD
+++ b/community/qt5-qtkeychain/APKBUILD
@@ -2,11 +2,12 @@
 # Maintainer: Leonardo Arena <rnalrd@alpinelinux.org>
 pkgname=qt5-qtkeychain
 pkgver=0.10.0
-pkgrel=1
+pkgrel=2
 pkgdesc="Qt API to store passwords and other secret data"
 url="https://github.com/frankosterfeld/qtkeychain"
 arch="all"
 license="BSD-2-Clause"
+depends="dbus:org.freedesktop.Secrets"
 makedepends="cmake qt5-qttools-dev libsecret-dev"
 subpackages="$pkgname-dev"
 replaces="qtkeychain"
