community/spectral: depend on dbus:org.freedesktop.Secrets
This way a secret manager is pulled in

--- a/community/spectral/APKBUILD
+++ b/community/spectral/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=spectral
 pkgver=0.0.0.817
 _pkgver=${pkgver##*.}
-pkgrel=2
+pkgrel=3
 _commit_libquotient="16d6700950f5f0ebd71481efd5e1a24f04e3c651"
 _commit_sortfilterproxymodel="36befddf5d57faad990e72c88c5844794f274145"
 # Blocked on armhf by qt5-qtdeclarative
@@ -12,6 +12,7 @@ arch="all !armhf !s390x"
 url="https://gitlab.com/spectral-im/spectral"
 pkgdesc="A glossy cross-platform Matrix client"
 license="GPL-3.0-or-later"
+depends="dbus:org.freedesktop.Secrets"
 makedepends="cmake qt5-qtbase-dev qt5-qtdeclarative-dev qt5-qtmultimedia-dev qt5-qtsvg-dev qt5-qtquickcontrols2-dev
  qt5-qtkeychain-dev libqtolm-dev olm-dev libsecret-dev cmark-dev"
 source="$pkgname-$pkgver.tar.gz::https://gitlab.com/spectral-im/spectral/-/archive/$_pkgver/spectral-$_pkgver.tar.gz
