community/seahorse: depend on gnome-keyring
It's a manager for gnome-keyring so it makes sense to pull it in.

--- a/community/seahorse/APKBUILD
+++ b/community/seahorse/APKBUILD
@@ -2,12 +2,12 @@
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=seahorse
 pkgver=3.34.1
-pkgrel=1
+pkgrel=2
 pkgdesc="GNOME application for managing PGP keys."
 url="https://projects.gnome.org/seahorse/"
 arch="all"
 license="GPL-2.0-or-later"
-depends="openssh dconf"
+depends="openssh dconf gnome-keyring"
 makedepends="vala libxml2-utils
 	yelp-tools intltool itstool gpgme-dev libsoup-dev
 	libsm-dev libsecret-dev gobject-introspection
