community/vinagre: depend on dbus:org.freedesktop.Secrets
This way a secret manager is pulled in

--- a/community/vinagre/APKBUILD
+++ b/community/vinagre/APKBUILD
@@ -2,12 +2,12 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=vinagre
 pkgver=3.22.0
-pkgrel=0
+pkgrel=1
 pkgdesc="VNC client for the GNOME desktop"
 url="https://wiki.gnome.org/Apps/Vinagre"
 arch="all !armhf !armv7" # polkit missing
 license="GPL-2.0-or-later"
-depends="openssh"
+depends="openssh dbus:org.freedesktop.Secrets"
 makedepends="libxml2-dev intltool itstool glib-dev libsecret-dev spice-gtk-dev
 	telepathy-glib-dev vte3-dev gtk-vnc-dev avahi-dev avahi-ui-dev vala"
 subpackages="$pkgname-doc $pkgname-lang"
