community/webkit2gtk: depend on dbus:org.freedesktop.Secrets
This way a secret manager is pulled in

--- a/community/webkit2gtk/APKBUILD
+++ b/community/webkit2gtk/APKBUILD
@@ -4,12 +4,12 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=webkit2gtk
 pkgver=2.26.4
-pkgrel=1
+pkgrel=2
 pkgdesc="Portable web rendering engine WebKit for GTK+"
 url="https://webkitgtk.org/"
 arch="all"
 license="LGPL-2.0-or-later AND BSD-2-Clause"
-depends="bubblewrap xdg-dbus-proxy"
+depends="bubblewrap xdg-dbus-proxy dbus:org.freedesktop.Secrets"
 makedepends="
 	bison
 	cmake
