testing/deja-dup: depend on dbus:org.freedesktop.Secrets
This way a secret manager is pulled in

--- a/testing/deja-dup/APKBUILD
+++ b/testing/deja-dup/APKBUILD
@@ -2,11 +2,12 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=deja-dup
 pkgver=40.6
-pkgrel=1
+pkgrel=2
 pkgdesc="Simple backup tool for GNOME"
 url="https://wiki.gnome.org/Apps/DejaDup"
 arch="all !s390x" # Nautilus
 license="GPL-3.0-or-later"
+depends="dbus:org.freedesktop.Secrets"
 makedepends="meson gtk+3.0-dev gnome-online-accounts-dev json-glib-dev
 	nautilus-dev libsecret-dev libsoup-dev vala itstool appstream-glib
 	desktop-file-utils"
