--- a/testing/phosh/APKBUILD
+++ b/testing/phosh/APKBUILD
@@ -2,14 +2,14 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=phosh
 pkgver=0.1.8
-pkgrel=1
+pkgrel=2
 pkgdesc="A shell PoC for the Librem5"
 # Blocked on s390x by gnome-session, gnome-settings-daemon, squeekboard and libhandy
 # Blocked on ppc64le by gnome-session
 arch="all !s390x !ppc64le"
 url="https://source.puri.sm/Librem5/phosh"
 license="GPL-3.0-only"
-depends="wayland-protocols phoc gnome-session bash dbus-x11 gnome-settings-daemon squeekboard libpulse"
+depends="wayland-protocols phoc gnome-session bash dbus-x11 gnome-settings-daemon squeekboard libpulse dbus:org.freedesktop.Secrets"
 makedepends="gtk+3.0-dev meson ninja gnome-desktop-dev libhandy-dev gcr-dev upower-dev linux-pam-dev git cmake pulseaudio-dev networkmanager-dev polkit-elogind-dev libsecret-dev"
 subpackages="$pkgname-lang"
 source="
