testing/tilix: depend on dbus:org.freedesktop.Secrets
This way a secret manager is pulled in

--- a/testing/tilix/APKBUILD
+++ b/testing/tilix/APKBUILD
@@ -2,12 +2,12 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=tilix
 pkgver=1.9.3
-pkgrel=3
+pkgrel=4
 pkgdesc="Tiling terminal emulator for Linux"
 url="https://gnunn1.github.io/tilix-web/"
 arch="x86_64" # ldc
 license="MPL-2.0"
-depends="gsettings-desktop-schemas libsecret libunwind"
+depends="gsettings-desktop-schemas libsecret libunwind dbus:org.freedesktop.Secrets"
 makedepends="dconf-dev gtkd-dev glib-dev libx11-dev meson ldc ldc-runtime
 	ldc-static po4a gdk-pixbuf libunwind-dev"
 options="!check" # no tests
