testing/gnome-shortwave: disable on s390x due to missing dep: rust

--- a/testing/gnome-shortwave/APKBUILD
+++ b/testing/gnome-shortwave/APKBUILD
@@ -6,7 +6,7 @@ _sha=f7e766fa413e532bc211bbcf2cc4c9528991ad62
 pkgrel=0
 pkgdesc="Listen to internet radio"
 url="https://gitlab.gnome.org/World/Shortwave"
-arch="all"
+arch="all !s390x" # Rust
 license="GPL-3.0-only"
 depends="gst-libav gst-plugins-base gst-plugins-bad gstreamer"
 makedepends="meson gettext cargo glib-dev gtk+3.0-dev libhandy-dev gstreamer-dev
