--- a/testing/mlt/APKBUILD
+++ b/testing/mlt/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Carlo Landmeter <clandmeter@gmail.com>
 # Maintainer: Kevin Daudt <kdaudt@alpinelinux.org>
 pkgname=mlt
-pkgver=6.18.0
+pkgver=6.20.0
 pkgrel=0
 pkgdesc="MLT Multimedia Framework"
 url="https://www.mltframework.org/"
@@ -41,7 +41,7 @@ py3() {
 	pkgdesc="$pkgdesc (Python bindings)"
 	depends="python3"
 
-	_pythonpath=`python3 -c "from sysconfig import get_path; print(get_path('platlib'))"`
+	_pythonpath=$(python3 -c "from sysconfig import get_path; print(get_path('platlib'))")
 
 	cd "$builddir"/src/swig/python
 	mkdir -p "$subpkgdir/$_pythonpath"
@@ -49,5 +49,5 @@ py3() {
 	install -m755 _mlt.so "$subpkgdir/$_pythonpath"
 }
 
-sha512sums="af6042fa554a7bf87060aaab401c51111fd03a1e50037024662fe727a2281c218f62db07f2c44db62d46f2b9ff67d4599f7aaccc2b337e20394383a24e3c5953  mlt-6.18.0.tar.gz
+sha512sums="939e837fb07ff0eace308987d83913e979f82c6eb156b40fde784f3f2b031b5f6896ac96dcde1627925cbb6fc76725f3fc4e5b2d0616fae11263648bcdbe82e3  mlt-6.20.0.tar.gz
 dfa4c192ce6121a3c86141c46a08eaf6cd6bd81c120786bdb1ef564bf7878dcb44031280b34609048409c3d09e8c0e1bd430dae1fe777ef030daf09b1dfd90a3  musl-locale.patch"
