main/freeradius: improve setup-freeradius enable-mod

--- a/main/freeradius/setup-freeradius.in
+++ b/main/freeradius/setup-freeradius.in
@@ -3,6 +3,19 @@ set -eu
 
 PROGNAME='setup-freeradius'
 DEFAULT_MODULES='@@DEFAULT_MODULES@@'
+# <subpkgname|module-name> <module-name>...
+EXTRA_MODULES='
+	dhcp
+	eap inner-eap
+	krb5
+	ldap
+	pam
+	perl
+	python3
+	redis rediswho
+	rest
+	sql abfab_psk_sql dhcp_sqlippool sqlcounter sqlippool
+	'
 MODS_AVAILABLE_DIR='/etc/raddb/mods-available'
 MODS_ENABLED_DIR='/etc/raddb/mods-enabled'
 SITES_AVAILABLE_DIR='/etc/raddb/sites-available'
@@ -12,6 +25,13 @@ SITES_ENABLED_DIR='/etc/raddb/sites-enabled'
 die() {
 	echo "$PROGNAME: $2" >&2
 	exit $1
+}
+
+find_mod_pkg() {
+	echo "$EXTRA_MODULES" \
+		| grep -m 1 -w "$1" \
+		| sed -En 's/^\s*(\S+).*/freeradius-\1/p' \
+		| grep .
 }
 
 case "${1:-}" in
@@ -33,21 +53,23 @@ case "${1:-}" in
 		EOF
 		exit 2
 	;;
-	enable-mod)
+	enable-mod | enable-module)
 		name=$2
 		modlink="$MODS_ENABLED_DIR/$name"
 
 		if [ -L "$modlink" ]; then
 			exit 0
-		elif [ -f "$MODS_AVAILABLE_DIR/$name" ]; then
+		fi
+		if pkgname=$(find_mod_pkg "$name"); then
+			apk add "$pkgname"
+		fi
+		if [ ! -L "$modlink" ] && [ -f "$MODS_AVAILABLE_DIR/$name" ]; then
 			ln -sv ../mods-available/$name "$MODS_ENABLED_DIR/$name"
-		elif apk info -q "freeradius-$name" >/dev/null; then
-			apk add "freeradius-$name"
 		else
 			die 3 "module '$name' is not available!"
 		fi
 	;;
-	disable-mod)
+	disable-mod | disable-modules)
 		name=$2
 		modlink="$MODS_ENABLED_DIR/$name"
 
