main/freeradius: move radclient to subpkg -utils
Since we have -utils subpackage, it doesn't make much sense to keep
just radclient in a separate subpackage.

--- a/main/freeradius/APKBUILD
+++ b/main/freeradius/APKBUILD
@@ -53,7 +53,6 @@ subpackages="
 	$pkgname-perl
 	$pkgname-postgresql
 	$pkgname-python3
-	$pkgname-radclient
 	$pkgname-sqlite
 	$pkgname-unixodbc
 	$pkgname-pam
@@ -322,14 +321,6 @@ python3() {
 	_enable_mod python3
 }
 
-radclient() {
-	pkgdesc="Client for FreeRADIUS server"
-	depends=""
-	provides="freeradius3-radclient=$pkgver-r$pkgrel"
-
-	amove usr/bin/radclient
-}
-
 sqlite() {
 	pkgdesc="SQLite module for FreeRADIUS server"
 	depends="freeradius-sql=$pkgver-r$pkgrel"
@@ -376,7 +367,10 @@ redis() {
 
 utils() {
 	pkgdesc="FreeRADIUS utilities"
-	depends="freeradius=$pkgver-r$pkgrel"
+	# provides/replaces for backward compatibility
+	provides="freeradius-radclient=$pkgver-r$pkgrel
+		freeradius3-radclient=$pkgver-r$pkgrel"
+	replaces="freeradius-radclient"
 
 	amove usr/bin/*
 }
