main/freeradius: fix problem with globbing

--- a/main/freeradius/APKBUILD
+++ b/main/freeradius/APKBUILD
@@ -88,9 +88,9 @@ builddir="$srcdir/$pkgname-server-$pkgver"
 #     - CVE-2019-11234
 #     - CVE-2019-11235
 
-_radconfdir="/etc/raddb"
+_radconfdir="etc/raddb"
 _radmodsdir="$_radconfdir/mods-available"
-_radlibdir="/usr/lib/freeradius"
+_radlibdir="usr/lib/freeradius"
 _radmodsconfdir="$_radconfdir/mods-config"
 ldpath="$_radlibdir"
 
@@ -119,7 +119,7 @@ build() {
 		--infodir=/usr/share/info \
 		--localstatedir=/var \
 		--datarootdir=/usr/share \
-		--libdir="$_radlibdir" \
+		--libdir="/$_radlibdir" \
 		--with-logdir=/var/log/radius \
 		--with-radacctdir=/var/log/radius/radacct \
 		--with-system-libtool \
@@ -147,7 +147,7 @@ build() {
 
 package() {
 	install -d -m0750 -o root -g radius \
-		"$pkgdir"$_radconfdir
+		"$pkgdir"/$_radconfdir
 
 	install -d -m0750 -o radius -g radius \
 		"$pkgdir"/var/cache/radiusd \
@@ -169,37 +169,37 @@ package() {
 	install -m755 -D setup-freeradius "$pkgdir"/usr/sbin/setup-freeradius
 
 	# Install misses to create this
-	mkdir -p "$pkgdir"$_radmodsconfdir/sql/ippool-dhcp/postgresql
+	mkdir -p "$pkgdir"/$_radmodsconfdir/sql/ippool-dhcp/postgresql
 
 	# Default modules are enabled by post-install script.
 	# The reason for this is that when we include these symlinks
 	# in the package, the user basically cannot permanently disable any
 	# default module by removing the symlink because apk will install them
 	# back on every upgrade of the package.
-	rm -f "$pkgdir"$_radconfdir/mods-enabled/*
+	rm -f "$pkgdir"/$_radconfdir/mods-enabled/*
 
 	# Remove unneeded and unused stuff (e.g. for disabled modules).
 
 	rm -f "$pkgdir"/usr/sbin/rc.radiusd
-	rm -f "$pkgdir"$_radlibdir/rlm_test.so
-	rm -f "$pkgdir"$_radconfdir/experimental.conf
+	rm -f "$pkgdir"/$_radlibdir/rlm_test.so
+	rm -f "$pkgdir"/$_radconfdir/experimental.conf
 
 	# https://github.com/FreeRADIUS/freeradius-server/issues/1734#issuecomment-247848277
 	rm -f "$pkgdir"/usr/bin/dhcpclient
 	rm -f "$pkgdir"/usr/share/man/man1/dhcpclient.1*
 
-	cd "$pkgdir"$_radmodsdir
+	cd "$pkgdir"/$_radmodsdir
 	rm -f couchbase python unbound yubikey
 
-	cd "$pkgdir"$_radmodsconfdir
+	cd "$pkgdir"/$_radmodsconfdir
 	rm -rf sql/*/mongo
 	rm -rf sql/*/oracle
 	rm -rf unbound
 
-	cd "$pkgdir"$_radconfdir/sites-available
+	cd "$pkgdir"/$_radconfdir/sites-available
 	rm -f abfab* *.orig
 
-	cd "$pkgdir"$_radconfdir/policy.d
+	cd "$pkgdir"/$_radconfdir/policy.d
 	rm -f abfab*
 }
 
@@ -381,8 +381,8 @@ _mvdb() {
 }
 
 _enable_mod() {
-	mkdir -p "$subpkgdir"$_radconfdir/mods-enabled
-	ln -s ../mods-available/$1 "$subpkgdir"$_radconfdir/mods-enabled/$1
+	mkdir -p "$subpkgdir"/$_radconfdir/mods-enabled
+	ln -s ../mods-available/$1 "$subpkgdir"/$_radconfdir/mods-enabled/$1
 }
 
 sha512sums="513ed0a5d9e6b9a8d89a9b02c86ff528a9ff14d928f4c1040ca44702465abd711588fe6afa35554cb2c8e8bd7f19dd5be3dbc78445c62c7b00bf5cbc4c621312  freeradius-server-3.0.20.tar.gz
