main/freeradius: return abfab*
I originally removed it based on Fedora as a part of bigger cleanup,
but now I couldn't find why Fedora actually removed it at the first
place and I myself didn't find any reason for removing it.

--- a/main/freeradius/APKBUILD
+++ b/main/freeradius/APKBUILD
@@ -197,10 +197,7 @@ package() {
 	rm -rf unbound
 
 	cd "$pkgdir"/$_radconfdir/sites-available
-	rm -f abfab* *.orig
-
-	cd "$pkgdir"/$_radconfdir/policy.d
-	rm -f abfab*
+	rm -f *.orig
 }
 
 eap() {
