main/dmvpn: various fixes
define ciphers for better security and performance
fix race condition in nhrp-events startup
close inactive IKE SAs

--- a/main/dmvpn/APKBUILD
+++ b/main/dmvpn/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Kaarle Ritvanen <kaarle.ritvanen@datakunkku.fi>
 pkgname=dmvpn
 pkgver=1.2.1
-pkgrel=1
+pkgrel=2
 pkgdesc="Dynamic Multipoint VPN"
 url="https://git.alpinelinux.org/cgit/dmvpn-tools/"
 arch="noarch"
@@ -13,7 +13,10 @@ subpackages="dmvpn-ca dmvpn-crl-dp lua-dmvpn"
 options="!check"
 source="$url/snapshot/dmvpn-tools-$pkgver.tar.bz2
         0001-use-static-config-file-for-charon.patch
-        0002-enable-make_before_break-for-charon.patch"
+        0002-enable-make_before_break-for-charon.patch
+        0003-close-IKE-SA-on-inactivity.patch
+        0004-define-cipher-proposals.patch
+        0005-nhrp-events-wait-for-socket-creation-on-startup.patch"
 builddir="$srcdir/dmvpn-tools-$pkgver"
 
 build() {
@@ -62,5 +65,8 @@ dmvpn() {
 }
 
 sha512sums="f39ad5b65a39d22a635a5f82f6024e21a6f899119718b5775eba965b903f007f611f6ea2c3456766f6f1e48d00fa43ddc5a8b3e8c9a732785c3db5ddf057c7b8  dmvpn-tools-1.2.1.tar.bz2
-4110663f6f896320193e18a5a004db7bd4915cc18565e7300827a736c6fd56f909b9ca1ba07a12958ee5673cb51603b3a0a084cd2f47154eb78de931a1fddd41  0001-use-static-config-file-for-charon.patch
-849927417e00472a7c01375b6451638c7b38fc7cf2471e659aec4de63f341f040aa3f8cf9fff976ce4827b7f5ed9eeff51d60f314121a74b106012c18f8c0727  0002-enable-make_before_break-for-charon.patch"
+1f80f10e90599780292be58ddad449bd3cf468458c5cd2dc9f7f7422b531f3507645017e404673fe4afc00679bf8fd24596964d070e8fd2e17e0297060954c98  0001-use-static-config-file-for-charon.patch
+eaffb04e5ae8f8c5796aca463d632fe62ed5b72a3606280a243bd7c978a9bd1095a15a06fb6eda86e22a9f15bd7fdd1ec27cf6ad1c7729f8b9f7dc3085bbbdf4  0002-enable-make_before_break-for-charon.patch
+5610a410a2267d1309d64515ed0f4d920b9ab6424db038ebeb47debf5ba46c1642b803ac67a125a371ac70dfaf4be9ac3bf9a1b546f78a1d2e268a22320a804d  0003-close-IKE-SA-on-inactivity.patch
+1828da98ab9fb1060ebed08f510d1c91eee795bb410cbc54a31c3bfe7d1c349461025e63d968575851f2772d2160c83682415f79ce3fe860336b1bd6adfbc22c  0004-define-cipher-proposals.patch
+2358c5873d431b211a51ac60100f93e5880ecdc649a6d00bef38a14464dae3f7c200590298075247dee21353c7d7c1f1e646dd9f1faf77e4e606cbc7b89de574  0005-nhrp-events-wait-for-socket-creation-on-startup.patch"
