main/gcc: disable D support on mips for now

--- a/main/gcc/APKBUILD
+++ b/main/gcc/APKBUILD
@@ -93,6 +93,11 @@ fi
 # See libphobos/configure.tgt in GCC sources for supported targets
 [ "$CARCH" = ppc64le ] && LANG_D=false
 
+# GDC requires libucontext on mips, which is not yet available
+case "$CTARGET_ARCH" in
+mips*)		LANG_D=false ;;
+esac
+
 # Go needs {set,make,swap}context, unimplemented in musl
 [ "$CTARGET_LIBC" = musl ] && LANG_GO=false
 
