--- a/community/suricata/APKBUILD
+++ b/community/suricata/APKBUILD
@@ -2,12 +2,13 @@
 # Contributor: Stuart Cardall <developer at it-offshore dot co.uk>
 # Maintainer: Steve McMaster <code@mcmaster.io>
 pkgname=suricata
-pkgver=5.0.1
+pkgver=5.0.2
 pkgrel=0
 pkgdesc="High performance Network IDS, IPS and Network Security Monitoring engine"
 url="https://suricata-ids.org/"
 # s390x lacks rust support
-arch="all !s390x"
+# ppc64le fails to build
+arch="all !s390x !ppc64le"
 license="GPL-2.0-only"
 makedepends="automake autoconf libtool libhtp-dev>=0.5.25 libcap-ng-dev lz4-dev
 	file-dev geoip-dev pcre-dev yaml-dev libpcap-dev hiredis-dev nss-dev
@@ -66,7 +67,7 @@ package() {
 	mkdir -p "$pkgdir"/etc/$pkgname/rules
 	install -Dm644 "$builddir"/rules/*.rules "$pkgdir"/etc/$pkgname/rules/
 }
-sha512sums="db0797a7992abf0ddf170cb603fdac06b0ff92278bb91343860bccbbe029ea0e83131dfb9805ca44bcbbe3925502119259e350a17e94209b21d1f8b610d965a6  suricata-5.0.1.tar.gz
+sha512sums="e288f6aee9f8fafb8fa811d2c83a89a29434edc24e05542e172852dc139b9d0bb474d35ddbdc4723df04e7a8b4e70e181c822a4fb1315ba2879c3c7a5c16ef16  suricata-5.0.2.tar.gz
 ed7c78a80192f3f3ed433330df323beccb6079b5413289b9e9faa3fceea2c536de93de7372968d8605abd1618d73c9319ee39d86b16eed22e7313c8667252f5d  suricata.confd
 258c6d60fc878dc1c7b7bf93cc758080050f591084a1edf7f1aac81ccb523c73615716616fedd0269f9ac5ef2fa7adcb3e2cefd714754bac5571e9806b6781be  suricata.initd
 4f76a35bcde78c9860701897fe19bb84cc46bbc429124c4cb2e94cf3330f00ebe8067c0d7f3f83478e9b95323adb947e5081658f455657c4d03c682abe707534  suricata.logrotate
