testing/zola: upgrade to 0.10.0

--- a/testing/zola/APKBUILD
+++ b/testing/zola/APKBUILD
@@ -1,28 +1,29 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
 # Maintainer:
 pkgname=zola
-pkgver=0.9.0
+pkgver=0.10.0
 pkgrel=0
 pkgdesc="Opionated static site generator"
 url="https://github.com/getzola/zola"
 # (! denote spurious SIGSEGVs, depends on upstream LLVM x Rust)
-arch="x86_64 !armv7 armhf aarch64 !x86 ppc64le" # Limited by cargo
+arch="x86_64 !armv7 armhf aarch64 !x86" # Limited by cargo
 license="MIT"
 makedepends="cargo openssl-dev libsass-dev oniguruma-dev"
 subpackages="
 	$pkgname-zsh-completion:zshcomp:noarch
 	$pkgname-fish-completion:fishcomp:noarch
-	$pkgname-bash-completion:bashcomp:noarch"
+	$pkgname-bash-completion:bashcomp:noarch
+	"
 source="$pkgname-$pkgver.tar.gz::https://github.com/getzola/zola/archive/v$pkgver.tar.gz"
 
-export RUSTONIG_SYSTEM_LIBONIG=1 # LInk against system liboniguruma
+export RUSTONIG_SYSTEM_LIBONIG=1 # Link against system liboniguruma
 
 build() {
-	cargo build --release --verbose
+	cargo build --release --verbose --locked
 }
 
 check() {
-	cargo test all --release --verbose
+	cargo test all --release --verbose --locked
 }
 
 package() {
@@ -57,4 +58,4 @@ fishcomp() {
 }
 
 
-sha512sums="e9496b57e005a751e85533807f6be275d187baa3f4371a29416dd7d2373d9214ee3469b032102c0544782527f93692d9d71a40d20e34cfe776be058777374756  zola-0.9.0.tar.gz"
+sha512sums="20f71426b111ce619e99ef86c979d3737dafb40328c25fad0e728ae3addf7d1801c58635ceed3df308780293ba32cc68963a8f5f5a94c0cae550c32297c48d44  zola-0.10.0.tar.gz"
