--- a/testing/xfdashboard/APKBUILD
+++ b/testing/xfdashboard/APKBUILD
@@ -1,6 +1,6 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=xfdashboard
-pkgver=0.7.5
+pkgver=0.7.7
 pkgrel=0
 pkgdesc="Maybe a Gnome shell like dashboard for Xfce"
 url="https://goodies.xfce.org/projects/applications/xfdashboard/start"
@@ -8,7 +8,7 @@ arch="all"
 license="GPL-2.0-or-later"
 makedepends="clutter-dev xfconf-dev garcon-dev gtk+3.0-dev libwnck3-dev"
 subpackages="$pkgname-dev $pkgname-lang"
-source="https://archive.xfce.org/src/apps/${pkgname}/${pkgver%.*}/xfdashboard-${pkgver}.tar.bz2"
+source="https://archive.xfce.org/src/apps/xfdashboard/${pkgver%.*}/xfdashboard-$pkgver.tar.bz2"
 
 build() {
 	./configure \
@@ -24,4 +24,4 @@ package() {
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="5d32aa3a49e02d85ca92bee6aa37a3b743e50ca5d992128decea5846e8c9008a9f5bdb98cc0ee3e980761a6538a4867ff28410e066ef22f0aa2c2bd4c5ce1523  xfdashboard-0.7.5.tar.bz2"
+sha512sums="561badb0b752dabb095881134050046f98eb4374c8e3c647a4ba7226c1efce650790ef3630b53a30cd48dab190afba31de2faef8991c13af64f7eb980b099989  xfdashboard-0.7.7.tar.bz2"
