community/gnome-disk-utility: upgrade to 3.34.4

--- a/community/gnome-disk-utility/APKBUILD
+++ b/community/gnome-disk-utility/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Rasmus Thomsen <oss@cogitri.dev>
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=gnome-disk-utility
-pkgver=3.34.0
-pkgrel=2
+pkgver=3.34.4
+pkgrel=0
 pkgdesc="GNOME libraries and applications for dealing with storage devices"
 url="https://wiki.gnome.org/Apps/Disks"
 arch="all !s390x"
@@ -11,7 +11,7 @@ depends="gptfdisk parted"
 makedepends="gnome-settings-daemon-dev glib-dev libxslt-dev intltool libcanberra-dev
 	libnotify-dev libdvdread-dev libpwquality-dev libsecret-dev udisks2-dev
 	meson xz-dev elogind-dev"
-options="!test" # no tests
+options="!check" # no tests
 subpackages="$pkgname-lang $pkgname-doc"
 source="https://download.gnome.org/sources/gnome-disk-utility/${pkgver%.*}/gnome-disk-utility-$pkgver.tar.xz"
 
@@ -29,4 +29,4 @@ package() {
 	DESTDIR="$pkgdir" ninja -C output install
 }
 
-sha512sums="df0ecef30fb864971f043f4773a553763799087e0a6db0c968c1eb35b6266a2b61299c0175e28b0d7cd167be05b9f783352221b48c0aa7a644791fdcd5e1ed56  gnome-disk-utility-3.34.0.tar.xz"
+sha512sums="3b0c40236e329fd4e0d709d8b7337627b7c84ab2a3973a2b1664a3c73e1f47ae17077000f242348a0342fdc64ca61c66a1c8db55a9ae5585a48004a7b699bc33  gnome-disk-utility-3.34.4.tar.xz"
