--- a/community/gom/APKBUILD
+++ b/community/gom/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Rasmus Thomsen <oss@cogitri.dev>
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=gom
-pkgver=0.3.3
-pkgrel=2
+pkgver=0.4
+pkgrel=0
 pkgdesc="GObject Data Mapper"
 url="https://wiki.gnome.org/Projects/Gom"
 arch="all"
@@ -10,7 +10,7 @@ license="LGPL-2.1-or-later"
 makedepends="meson vala gobject-introspection-dev py3-gobject3 sqlite-dev glib-dev
 	gdk-pixbuf-dev"
 subpackages="$pkgname-dev"
-source="https://download.gnome.org/sources/gom/${pkgver%.*}/gom-${pkgver}.tar.xz"
+source="https://download.gnome.org/sources/gom/$pkgver/gom-$pkgver.tar.xz"
 
 build() {
 	meson \
@@ -32,4 +32,4 @@ package() {
 	DESTDIR="$pkgdir" ninja -C output install
 }
 
-sha512sums="152924e704c92f39c493a8becc73fac1f7fe396f4f9e7c154dccec2b4413476821e43abf3c108cc1304de471e61f56c265f124710379ad8568b68f8902064e03  gom-0.3.3.tar.xz"
+sha512sums="d847928ce09c53a3f64777c313cb843052e5e001873f29d3f7acf02772cadf0e4b133fb0137aa0463b4ff95dd54810bde87062d8e396ff4fc6d142ba59c8e9c8  gom-0.4.tar.xz"
