testing/sqm-scripts: upgrade to 1.4.0

--- a/testing/sqm-scripts/APKBUILD
+++ b/testing/sqm-scripts/APKBUILD
@@ -1,44 +1,24 @@
 # Contributor:
 # Maintainer:
 pkgname=sqm-scripts
-pkgver=1.0.7
+pkgver=1.4.0
 pkgrel=0
 pkgdesc="SQM scripts traffic shaper"
 url="https://github.com/tohojo/sqm-scripts"
 arch="noarch"
 license="GPL-2.0"
 depends="iproute2 iptables ip6tables"
-depends_dev=""
 makedepends="$depends_dev"
-install=""
-subpackages=""
-source="$pkgname-$pkgver.tar.gz::https://github.com/tohojo/sqm-scripts/archive/v${pkgver}.tar.gz
-	10-Makefile.patch
-	10-function.sh.patch
+source="$pkgname-$pkgver.tar.gz::https://github.com/tohojo/sqm-scripts/archive/v$pkgver.tar.gz
 	10-defaults.sh.patch"
 
-_builddir="$srcdir/sqm-scripts-$pkgver"
-prepare() {
-	local i
-	cd "$_builddir"
-	for i in $source; do
-		case $i in
-		*.patch) msg $i; patch -p1 -i "$srcdir"/$i || return 1;;
-		esac
-	done
-}
-
-build() {
-	cd "$_builddir"
-}
-
 package() {
-	cd "$_builddir"
 	install -m 0755 -d $pkgdir/etc/network/if-up.d
-        make DESTDIR="$pkgdir" install || return 1
+	make DESTDIR="$pkgdir" install
+
+	rm -rf "$pkgdir"/usr/lib/tmpfiles.d
+	rm -rf "$pkgdir"/usr/lib/systemd
 }
 
-sha512sums="4f8a23511669d78a54ad3ec7b9c83a8cac18bf57010003c5208a75577602d8be2ce4e481d8b5e58739d703f46ba9962a1b24fa240da3169705bb1e00ba2674dc  sqm-scripts-1.0.7.tar.gz
-4bbdf01ad1c8e79b67586d4eb0397ed9f2e8fff18163b4f81b014afd8a2c6c871da53861d0778531d62e0d7a9f4843d9a4f7a6a5dee5c74f12b1ce2c1454fb17  10-Makefile.patch
-b5904eec7196de7ad8ebb3a8c3f6771bc62bae48057e14ba073ea4f34abb50d5459beb436f58f1ee2e2abd3d4f5a7d36370dc09d65a55fa647fd1a43cb3303e6  10-function.sh.patch
+sha512sums="8e0ce5a8e5f717b87e5018c0b019f9de2f931bb146d3e21c810b2fe9f39b2692e46816a71b053cf4965ec55320f5fafb59d0c31e45ee0c9d9e8eb73bcd320cfb  sqm-scripts-1.4.0.tar.gz
 a5d90befde15afe588d6ac46a3ce4c7b123d0d233e83be5c36c9f45f14d71622f6da6c9c47fe219645a474705daaacc52e246ce7c21b313631371db2962a3f9a  10-defaults.sh.patch"
