--- a/testing/kio-fuse/APKBUILD
+++ b/testing/kio-fuse/APKBUILD
@@ -2,12 +2,14 @@
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=kio-fuse
 pkgver=4.90.0
-pkgrel=1
+pkgrel=2
 arch="all !armhf"
 url="https://kde.org/"
 pkgdesc="FUSE interface for KIO"
 license="GPL-3.0-only"
-makedepends="extra-cmake-modules qt5-qtbase-dev kcoreaddons-dev kdbusaddons-dev kio-dev fuse3-dev"
+makedepends="extra-cmake-modules qt5-qtbase-dev kcoreaddons-dev kdbusaddons-dev
+	kio-dev fuse3-dev
+	"
 checkdepends="dbus"
 source="https://download.kde.org/unstable/kio-fuse/$pkgver/kio-fuse-$pkgver.tar.xz
 	modules-load.conf"
@@ -39,6 +41,9 @@ package() {
 	DESTDIR="$pkgdir" make install
 
 	install -Dm644 "$srcdir"/modules-load.conf "$pkgdir"/usr/lib/modules-load.d/kio-fuse.conf
+
+	# Part of systemd-tmpfiles
+	rm -rf "$pkgdir"/usr/lib/tmpfiles.d
 }
 
 sha512sums="524b9f6559c7f30823a5e2ffddd65a36ea569bbdba493563fcf9e0a038cd897c27cdf0450a932d7307dec663e898c2f693f6ee17a679df8d4ddf566ffcab73ce  kio-fuse-4.90.0.tar.xz
