--- a/community/ospd/APKBUILD
+++ b/community/ospd/APKBUILD
@@ -2,22 +2,21 @@
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=ospd
 pkgver=2.0.0
-pkgrel=1
+pkgrel=2
 pkgdesc="Collection of scanner wrappers for OpenVAS"
-url="http://www.openvas.org/"
+url="https://www.openvas.org/"
 arch="noarch"
-license="GPL"
+license="GPL-2.0-or-later"
 depends="python3 py3-paramiko py3-defusedxml py3-lxml"
 makedepends="py3-setuptools"
-source="$pkgname-$pkgver.tar.gz::https://github.com/greenbone/$pkgname/archive/v$pkgver.tar.gz"
-builddir="$srcdir"/$pkgname-$pkgver
+source="$pkgname-$pkgver.tar.gz::https://github.com/greenbone/ospd/archive/v$pkgver.tar.gz"
 
 build() {
 	python3 setup.py build
 }
 
 check() {
-    python3 setup.py check
+	python3 setup.py check
 }
 
 package() {
