main/pkgconf: fix url=

--- a/main/pkgconf/APKBUILD
+++ b/main/pkgconf/APKBUILD
@@ -1,19 +1,18 @@
 # Maintainer: Drew DeVault <sir@cmpwn.com>
 pkgname=pkgconf
 pkgver=1.6.3
-pkgrel=0
+pkgrel=1
 pkgdesc="development framework configuration tools"
-url="https://git.dereferenced.org/pkgconf/pkgconf"
+url="https://github.com/pkgconf/pkgconf"
 arch="all"
 license="ISC"
 replaces="pkgconfig"
 provides="pkgconfig=1"
-source="https://distfiles.dereferenced.org/pkgconf/pkgconf-$pkgver.tar.xz"
 subpackages="$pkgname-doc $pkgname-dev"
+source="https://distfiles.dereferenced.org/pkgconf/pkgconf-$pkgver.tar.xz"
 checkdepends="kyua atf"
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -27,13 +26,10 @@ build() {
 }
 
 check() {
-	cd "$builddir"
 	make check
 }
 
 package() {
-	cd "$builddir"
-
 	make DESTDIR="$pkgdir" install
 	ln -s pkgconf "$pkgdir"/usr/bin/pkg-config
 }
