--- a/main/pm-utils/APKBUILD
+++ b/main/pm-utils/APKBUILD
@@ -2,21 +2,17 @@
 # Maintainer: Leonardo Arena <rnalrd@alpinelinux.org>
 pkgname=pm-utils
 pkgver=1.4.1
-pkgrel=1
+pkgrel=2
 pkgdesc="A small collection of scripts that handle suspend and resume on behalf of HAL"
-url="http://pm-utils.freedesktop.org"
+url="https://pm-utils.freedesktop.org/wiki/"
 arch="all"
 options="!check"  # No test suite.
 license="GPL-2.0-only"
-depends=
-depends_dev=
-makedepends="linux-headers $depends_dev"
-install=
+makedepends="linux-headers"
 subpackages="$pkgname-dev $pkgname-doc"
-source="https://pm-utils.freedesktop.org/releases/$pkgname-$pkgver.tar.gz"
+source="https://pm-utils.freedesktop.org/releases/pm-utils-$pkgver.tar.gz"
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -28,7 +24,6 @@ build() {
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 }
 
