testing/dar: fix /etc/darrc location

--- a/testing/dar/APKBUILD
+++ b/testing/dar/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Simon Rupf <simon@rupf.net>
 pkgname=dar
 pkgver=2.6.8
-pkgrel=0
+pkgrel=1
 pkgdesc="Disk ARchive"
 url="http://dar.linux.free.fr/"
 arch="all"
@@ -22,7 +22,12 @@ prepare() {
 }
 
 build() {
-	./configure --prefix=/usr --disable-dar-static --disable-static --disable-upx
+	./configure \
+		--prefix=/usr \
+		--sysconfdir=/etc \
+		--disable-dar-static \
+		--disable-static \
+		--disable-upx
 	make
 }
 
