community/nextcloud-client: disable built-in update check
We don't want users to receive a notification to update while it's not
available in our repositories yet

--- a/community/nextcloud-client/APKBUILD
+++ b/community/nextcloud-client/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Leonardo Arena <rnalrd@alpinelinux.org>
 pkgname=nextcloud-client
 pkgver=2.6.3
-pkgrel=0
+pkgrel=1
 pkgdesc="Nextcloud Desktop Client"
 url="https://github.com/nextcloud/desktop"
 # s390x and ppc64le blocked by qt5-qtwebengine
@@ -13,7 +13,8 @@ makedepends="$depends_dev cmake doxygen qt5-qttools-dev qt5-qtkeychain-dev
 	graphviz extra-cmake-modules kio-dev qt5-qtwebengine-dev"
 subpackages="$pkgname-dev $pkgname-dolphin"
 options="!check" # no testsuite
-source="$pkgname-$pkgver.tar.gz::https://github.com/nextcloud/desktop/archive/v${pkgver/_p/-fix}.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://github.com/nextcloud/desktop/archive/v${pkgver/_p/-fix}.tar.gz
+	Nextcloud.conf"
 builddir="$srcdir/desktop-${pkgver/_p/-fix}"
 
 build() {
@@ -29,6 +30,8 @@ build() {
 
 package() {
 	make DESTDIR="$pkgdir" install
+
+	install -Dm644 "$srcdir"/Nextcloud.conf "$pkgdir"/etc/Nextcloud/Nextcloud.conf
 }
 
 dolphin() {
@@ -42,4 +45,5 @@ dolphin() {
 	mv "$pkgdir"/usr/share/kservices5 "$subpkgdir"/usr/share/
 }
 
-sha512sums="ddeb8a32e0208bc415bf421cb3ce05713adb617fa78c0b5cb4d894c9e8d3499dcc495c115de3ea7abb0c402eef4bc64ede8c59a7f056acda47779096fedc8025  nextcloud-client-2.6.3.tar.gz"
+sha512sums="ddeb8a32e0208bc415bf421cb3ce05713adb617fa78c0b5cb4d894c9e8d3499dcc495c115de3ea7abb0c402eef4bc64ede8c59a7f056acda47779096fedc8025  nextcloud-client-2.6.3.tar.gz
+28faf643e3ba22f3e1f45a96acfba1b3c53c49d4e923974e58e5ad2fdda612f52300608f0e0219e61d3478403fe3c59a9a2c70c3db1c93fbccda1e0638ecbc22  Nextcloud.conf"
