testing/picard: add missing runtime dep

--- a/testing/picard/APKBUILD
+++ b/testing/picard/APKBUILD
@@ -2,12 +2,12 @@
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=picard
 pkgver=2.2.3
-pkgrel=1
+pkgrel=2
 arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 url="https://picard.musicbrainz.org/"
 pkgdesc="Official MusicBrainz tagger"
 license="GPL-2.0-or-later"
-depends="py3-mutagen"
+depends="py3-mutagen chromaprint"
 makedepends="python3-dev py3-qt5 gettext"
 checkdepends="py3-mutagen"
 source="https://github.com/metabrainz/picard/archive/$pkgver/picard-$pkgver.tar.gz"
