--- a/community/perl-glib/APKBUILD
+++ b/community/perl-glib/APKBUILD
@@ -3,15 +3,14 @@
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=perl-glib
 _pkgreal=Glib
-pkgver=1.3291
-pkgrel=1
+pkgver=1.3292
+pkgrel=0
 pkgdesc="Perl module for Glib"
 url="https://metacpan.org/release/Glib"
 arch="all"
 license="GPL-1.0-or-later OR Artistic-1.0-Perl"
-cpanmakedepends="perl-extutils-depends perl-extutils-pkgconfig"
 depends="perl"
-makedepends="perl-dev glib-dev $cpanmakedepends"
+makedepends="perl-dev glib-dev perl-extutils-depends perl-extutils-pkgconfig"
 subpackages="$pkgname-doc"
 source="https://cpan.metacpan.org/authors/id/X/XA/XAOC/Glib-$pkgver.tar.gz"
 
@@ -32,4 +31,4 @@ package() {
 }
 
 
-sha512sums="5c596e29c3e2ef72908668ddf1f260cf217b64d73732e90ef0fdef007f98b29efcd0620f01e0a39b5f2a0b368d4a05926543c9db0593bfa5a027e86af95fddba  Glib-1.3291.tar.gz"
+sha512sums="38c517de573988110648d6fed30a6c76fbb637d6eaf5a1029a5e8a1dcf69998baeb533eb1625a7b40a3bc8884050c6d14b1b248ac2c472e1e2d237769674c469  Glib-1.3292.tar.gz"
