main/apk-tools: upgrade to 2.10.5

--- a/main/apk-tools/APKBUILD
+++ b/main/apk-tools/APKBUILD
@@ -1,19 +1,17 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=apk-tools
-pkgver=2.10.4
-pkgrel=3
+pkgver=2.10.5
+pkgrel=0
 pkgdesc="Alpine Package Keeper - package manager for alpine"
 subpackages="$pkgname-static"
 makedepends_build="openssl"
 makedepends_host="zlib-dev openssl-dev zlib-static openssl-libs-static linux-headers"
 makedepends="$makedepends_build $makedepends_host"
 if [ "$CBUILD" = "$CHOST" ]; then
-	subpackages="$subpackages lua5.2-apk:luaapk"
-	makedepends="$makedepends lua5.2-dev"
+	subpackages="$subpackages lua5.3-apk:luaapk"
+	makedepends="$makedepends lua5.3-dev"
 fi
 source="https://dev.alpinelinux.org/archive/apk-tools/apk-tools-$pkgver.tar.xz
-	0001-add-fix-virtual-package-id-generation.patch
-	lua-apk_time.patch
 	"
 
 url="https://git.alpinelinux.org/cgit/apk-tools/"
@@ -81,6 +79,4 @@ luaapk() {
 	mv "$pkgdir"/usr/lib "$subpkgdir"/usr/lib/
 }
 
-sha512sums="d2d9fde0aae9059236f68a3fc2f2186104bb9a099b15d296a6202a20ab2912638f10bb3b9edb70f359d060c5839573c3d50ef37d13095fa01c66dc3219ab6e39  apk-tools-2.10.4.tar.xz
-3cf1ae421e136ebe8c037a468fbeb3bca11668eb04dd4b8b9346c4089306002c891d6c2544d22522550f37a4fad0dfcecabceb4c8872165ea6827dcce46d9f2b  0001-add-fix-virtual-package-id-generation.patch
-7751f4ddbf3f1b14f5d70ea0f8c2f78168d6138272f883fe1c0137ed135c3f3639f4bf2860dbf6b6de0d4321c93ec9c150edaf5f496c4dc0fedd0a201f399599  lua-apk_time.patch"
+sha512sums="0f85ec7c734f2ffc671007fa029f3c96eacfb196c45e465e33aa65c32a6fbcd7523153b6441fdf826a5b4d2e66de02d338620474d333c28cb1ce0233f1120495  apk-tools-2.10.5.tar.xz"
