--- a/community/recon-ng/APKBUILD
+++ b/community/recon-ng/APKBUILD
@@ -1,12 +1,12 @@
 # Contributor: Francesco Colista <fcolista@alpinelinux.org>
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=recon-ng
-pkgver=5.1.0
+pkgver=5.1.1
 pkgrel=0
 pkgdesc="Full-featured Web Reconnaissance framework written in Python"
 url="https://bitbucket.org/LaNMaSteR53/recon-ng"
 arch="noarch"
-license="GPL-3.0"
+license="GPL-3.0-only"
 depends="py3-dicttoxml py3-dnspython py3-lxml py3-yaml
 	py3-mechanize py3-requests py3-xlsxwriter py3-flask
 	py3-unicodecsv"
@@ -24,4 +24,4 @@ package() {
 		"$pkgdir"/usr/share/recon-ng/docker-compose.yml
 }
 
-sha512sums="9643996419eeb1f65357787890cef75247f0d83f1ccfd66fcc2286116441e03427f74e473dabb18ac9401c0476addde070bac22a9d3015a617e342c30b532edc  recon-ng-5.1.0.tar.gz"
+sha512sums="ca45488555b7b48ddc1596b9eb7322064ae6bbec0c5b0cbce2cfd58821a788bc65cf7239f7c6736bede891b848e25bb5eaacd377add26236c426f7e695a4441a  recon-ng-5.1.1.tar.gz"
