--- a/community/atril/APKBUILD
+++ b/community/atril/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Alan Lacerda <alacerda@alpinelinux.org>
 # Maintainer: Alan Lacerda <alacerda@alpinelinux.org>
 pkgname=atril
-pkgver=1.22.3
+pkgver=1.24.0
 pkgrel=0
 pkgdesc="A document viewer for MATE"
 url="https://github.com/mate-desktop/atril"
@@ -13,7 +13,7 @@ options="!check"
 makedepends="intltool glib-dev gtk+3.0-dev mate-desktop-dev
 	dconf-dev libsm-dev libsecret-dev caja-extensions-dev caja-dev
 	poppler-dev tiff-dev itstool libgxps-dev libxml2-utils libxml2-dev
-	libspectre-dev python3-dev webkit2gtk-dev"
+	libspectre-dev python3-dev webkit2gtk-dev texlive-dev"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-lang"
 source="https://pub.mate-desktop.org/releases/${pkgver%.*}/atril-$pkgver.tar.xz"
 
@@ -35,4 +35,4 @@ package() {
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="f4a83702818e1fb32279c67f1727c01480d27fe756f3fc0ff9dcd42584ce74ce10ac7ee81c0149f3756b6eb08f2a011ede28706ab54ff16a51c544a1af3b103f  atril-1.22.3.tar.xz"
+sha512sums="dfdd5ed82ba76c4f0a446a95b0a6201bedf8b4d00ff46ce697a5b937251f6d7a1888ca76eef623eb84dcddb425c7ad662e179f593686bba064b7491d4d940293  atril-1.24.0.tar.xz"
