testing/py3-astral: upgrade to 2.1

--- a/testing/py3-astral/APKBUILD
+++ b/testing/py3-astral/APKBUILD
@@ -2,15 +2,15 @@
 # Maintainer: Fabian Affolter <fabian@affolter-engineering.ch>
 pkgname=py3-astral
 _pkgname=astral
-pkgver=1.10.1
-pkgrel=3
+pkgver=2.1
+pkgrel=0
 pkgdesc="Calculations for the position of the sun and moon"
 url="https://pypi.python.org/pypi/astral"
 arch="noarch"
 license="Apache-2.0"
 depends="py3-requests py3-tz python3"
 makedepends="py3-setuptools"
-checkdepends="py3-pytest"
+checkdepends="py3-pytest py3-freezegun"
 source="$_pkgname-$pkgver.tar.gz::https://github.com/sffjunkie/astral/archive/$pkgver.tar.gz"
 builddir="$srcdir"/$_pkgname-$pkgver
 
@@ -23,11 +23,11 @@ build() {
 
 check() {
 	# skip the webtest since we lack an API key
-	py.test-3 -v -m "not webtest"
+	PYTHONPATH="$PWD/build/lib" py.test-3 -v -m "not webtest"
 }
 
 package() {
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
 }
 
-sha512sums="f76e6297ecb51d8ec536018ad633e96b645cca779d1a67af5c71dcffef23bc73c1ad0543b2a7b1faeb10e5777b4afb68bc2c0f589b34e44a09c168adf4b72e15  astral-1.10.1.tar.gz"
+sha512sums="149eb10dadefc42c01e95603ae0af0f57a848299177b0296661661dc2e3bdd3adb1f691b3c90f3b09be627971ec87872015a3fbdeb9c1b553f6b36228d7f8d67  astral-2.1.tar.gz"
