--- a/testing/qscintilla/APKBUILD
+++ b/testing/qscintilla/APKBUILD
@@ -1,6 +1,6 @@
 # Maintainer: Marian Buschsiewke <marian.buschsieweke@ovgu.de>
 pkgname=qscintilla
-pkgver=2.11.2
+pkgver=2.11.4
 pkgrel=0
 pkgdesc="QScintilla is a port to Qt of Neil Hodgson's Scintilla C++ editor control"
 url="https://www.riverbankcomputing.com/software/qscintilla"
@@ -8,8 +8,8 @@ arch="all"
 license=" GPL-3.0-only"
 subpackages="$pkgname-dev"
 makedepends="qt5-qtbase-dev"
-source="https://www.riverbankcomputing.com/static/Downloads/QScintilla/$pkgver/QScintilla_gpl-$pkgver.tar.gz"
-builddir="$srcdir/QScintilla_gpl-$pkgver/Qt4Qt5"
+source="https://www.riverbankcomputing.com/static/Downloads/QScintilla/$pkgver/QScintilla-$pkgver.tar.gz"
+builddir="$srcdir/QScintilla-$pkgver/Qt4Qt5"
 
 build() {
 	qmake-qt5
@@ -24,4 +24,4 @@ package() {
 	make DESTDIR="$pkgdir" INSTALL_ROOT="$pkgdir" install -j1
 }
 
-sha512sums="de4eb9fb8d13c1a8f1acb6e941a8e751e0f0df02b59eb1a32bcdbedc1cc62ad3a1b778d45541ea048710349db827323a07aaede415712d6c9ac6acc07f0c160f  QScintilla_gpl-2.11.2.tar.gz"
+sha512sums="90fc2427121ca9ae55e34cf636460099bbdadd844318d9ef05f86790a36e25fb64528264bb7bb99e46b7add96378eff0cc69bb692940c6a1bddfadf86a9abdbd  QScintilla-2.11.4.tar.gz"
