--- a/main/avahi/APKBUILD
+++ b/main/avahi/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=avahi
-pkgver=0.7
-pkgrel=4
+pkgver=0.8
+pkgrel=0
 pkgdesc="A multicast/unicast DNS-SD framework"
 url="https://www.avahi.org/"
 arch="all"
@@ -12,14 +12,14 @@ depends_dev="gdbm-dev"
 makedepends="$depends_dev
 	intltool gobject-introspection-dev expat-dev
 	libdaemon-dev glib-dev dbus-dev libcap-dev
-	gettext-dev autoconf automake libtool"
+	gettext-dev autoconf automake libtool
+	libevent-dev"
 install="$pkgname.pre-install"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-tools $pkgname-glib
 	$pkgname-libs $pkgname-compat-howl:howl
 	$pkgname-compat-libdns_sd:lidns_sd $pkgname-lang
 	"
 source="https://github.com/lathiat/avahi/releases/download/v$pkgver/avahi-$pkgver.tar.gz
-	CVE-2017-6519-and-CVE-2018-1000845.patch
 	"
 
 # secfixes:
@@ -34,6 +34,7 @@ prepare() {
 
 build() {
 	# we dont build autoipd since dhcpcd does same job
+	LDFLAGS="$LDFLAGS -lintl" \
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -43,12 +44,12 @@ build() {
 		--disable-autoipd \
 		--disable-qt3 \
 		--disable-qt4 \
+		--disable-qt5 \
 		--disable-gtk \
 		--disable-gtk3 \
 		--disable-mono \
 		--disable-monodoc \
 		--disable-doxygen-doc \
-		--disable-pygtk \
 		--disable-xmltoman \
 		--enable-compat-libdns_sd \
 		--enable-compat-howl \
@@ -115,5 +116,4 @@ lidns_sd() {
 		"$subpkgdir"/usr/lib/
 }
 
-sha512sums="bae5a1e9204aca90b90e7fd223d19e809e3514d03ba5fa2da1e55bf1d72d3d3b98567f357900c36393613dc17dc98e15ff3ebf0f226f2f6b9766e592452a6ce7  avahi-0.7.tar.gz
-dc5c9fde8d1244e70e3cf1c09bc274b094458d2fad982f5a79bcbf3cbddc43a0cf79e9ba106b3b0446a6f0b006fd3beeee48a03bd3d8a06cf8d9821f6945ffed  CVE-2017-6519-and-CVE-2018-1000845.patch"
+sha512sums="c6ba76feb6e92f70289f94b3bf12e5f5c66c11628ce0aeb3cadfb72c13a5d1a9bd56d71bdf3072627a76cd103b9b056d9131aa49ffe11fa334c24ab3b596c7de  avahi-0.8.tar.gz"
