main/py3-requests: fix running with new idna
Use a patch from upstream

--- a/main/py3-requests/APKBUILD
+++ b/main/py3-requests/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=py3-requests
 _pkgname=requests
 pkgver=2.22.0
-pkgrel=0
+pkgrel=1
 pkgdesc="A HTTP request library for Python3"
 url="http://www.python-requests.org/"
 arch="noarch"
@@ -12,7 +12,9 @@ license="Apache-2.0"
 options="!check"
 depends="python3 py3-chardet py3-idna py3-certifi py3-urllib3"
 makedepends="py3-setuptools"
-source="https://files.pythonhosted.org/packages/source/${_pkgname:0:1}/$_pkgname/$_pkgname-$pkgver.tar.gz"
+source="https://files.pythonhosted.org/packages/source/${_pkgname:0:1}/$_pkgname/$_pkgname-$pkgver.tar.gz
+	https://github.com/psf/requests/commit/c46f55bd48dabc02f033d252f8c64e2011f37361.patch
+	"
 builddir="$srcdir/$_pkgname-$pkgver"
 
 replaces="py-requests" # Backwards compatibility
@@ -26,4 +28,5 @@ package() {
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
 }
 
-sha512sums="8b8e9da8a0c816fb4ff39be89ac7e1a9d5a99503ed93e44a0d78b28818f1c0eb253b151972a144151a616ba1b4bc5595245458a8268c5161391db54f740ac9a5  requests-2.22.0.tar.gz"
+sha512sums="8b8e9da8a0c816fb4ff39be89ac7e1a9d5a99503ed93e44a0d78b28818f1c0eb253b151972a144151a616ba1b4bc5595245458a8268c5161391db54f740ac9a5  requests-2.22.0.tar.gz
+b719c972dd21d2ca42110a8eb45e580fd33c859e2c0935fdacb33b022ce92ae13ee0501b122af56a253b4f1f9c226673151170f6a11ccf2421d4680281bf7fb3  c46f55bd48dabc02f033d252f8c64e2011f37361.patch"
