testing/git-secret: upgrade to 0.3.2

--- a/testing/git-secret/APKBUILD
+++ b/testing/git-secret/APKBUILD
@@ -4,7 +4,7 @@
 # Note: git-secret is very badly designed, I'll replace this abuild once
 #   I find or write something better.
 pkgname=git-secret
-pkgver=0.2.6
+pkgver=0.3.2
 pkgrel=0
 pkgdesc="A bash-tool to store your private data inside a git repository"
 url="https://git-secret.io/"
@@ -13,7 +13,7 @@ license="MIT"
 depends="bash gnupg"
 checkdepends="bats"
 subpackages="$pkgname-doc"
-source="$pkgname-$pkgver.tar.gz::https://github.com/sobolevn/$pkgname/archive/v$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://github.com/sobolevn/git-secret/archive/v$pkgver.tar.gz"
 options="!check"  # does not work in a container w/o tty
 
 build() {
@@ -28,4 +28,4 @@ package() {
 	make PREFIX="$pkgdir/usr" install
 }
 
-sha512sums="9f83265d17eeb077882602fe3a69a161629e2fbe983b583c048bf55d0590a50d232d19fc8b89a599bcbe5f6280049f21a527b41985ffbc59ee52e01beb2d7ba2  git-secret-0.2.6.tar.gz"
+sha512sums="201c7d965457c0f60905251241d89031e26ca9fac13fced0321f09c4f4f7911cd96de3970c1ed308736c89f322fc487e8d7d3ddc77958aded48c2a202996a09b  git-secret-0.3.2.tar.gz"
