testing/clojure: disable on armhf

--- a/testing/clojure/APKBUILD
+++ b/testing/clojure/APKBUILD
@@ -5,7 +5,7 @@ pkgver=1.10.1
 pkgrel=0
 pkgdesc="The Clojure Programming Language"
 url="http://clojure.org"
-arch="all !armv7 !x86"
+arch="all !armv7 !armhf !x86"
 license="Apache-2.0"
 makedepends="maven"
 source="https://github.com/clojure/clojure/archive/clojure-$pkgver.tar.gz
