testing/whipper: try to fix build on armhf

--- a/testing/whipper/APKBUILD
+++ b/testing/whipper/APKBUILD
@@ -34,10 +34,7 @@ build() {
 }
 
 check() {
-	# fix to locate accuraterip
-	local python_version=$(python3 -c 'import sys; print(".".join(map(str, sys.version_info[:2])))')
-
-	PYTHONPATH="build/lib.linux-$CARCH-$python_version/" python3 -m unittest discover
+	PYTHONPATH="$(echo $PWD/build/lib.*)" python3 -m unittest discover
 }
 
 package() {
