community/rtl8821ce-lts: use _kver as pkgver

--- a/community/rtl8821ce-lts/APKBUILD
+++ b/community/rtl8821ce-lts/APKBUILD
@@ -6,10 +6,12 @@ _krel=1
 _flavor="$FLAVOR"
 [ -z "$_flavor" ] && _flavor=lts
 
-pkgname="rtl8821ce-lts"
-pkgver="0_git20200211"
 _commit=74c454f7af8ec3426cc6a937f37c562c10f49bd2
-pkgrel=0
+_rel=0
+
+pkgname="rtl8821ce-lts"
+pkgver="$_kver"
+pkgrel=$((_krel + _rel))
 pkgdesc="Wifi drivers for Realtek 8821ce"
 url="https://github.com/tomaspinho/rtl8821ce"
 arch="x86_64 x86" # Only builds on these platforms
@@ -42,4 +44,4 @@ package() {
 		"$pkgdir"/lib/modules/$_kver-$_krel-$_flavor/extra/8821ce.ko
 }
 
-sha512sums="8de5f2ddfa84a72e4ff3d2a1450201b628c82dc4a163b9329f448f4088510f63ff5997da51d2fbb2be306bed752fa77d9d4920cb08d4fb410c82b578d995f19c  rtl8821ce-lts-0_git20200211.tar.gz"
+sha512sums="8de5f2ddfa84a72e4ff3d2a1450201b628c82dc4a163b9329f448f4088510f63ff5997da51d2fbb2be306bed752fa77d9d4920cb08d4fb410c82b578d995f19c  rtl8821ce-lts-5.4.20.tar.gz"
