main/linux-lts: restore stackprotector on ppc64le, defang stackprotector check

--- a/main/linux-lts/APKBUILD
+++ b/main/linux-lts/APKBUILD
@@ -7,7 +7,7 @@ case $pkgver in
 	*.*.*)	_kernver=${pkgver%.*};;
 	*.*) _kernver=$pkgver;;
 esac
-pkgrel=0
+pkgrel=1
 pkgdesc="Linux lts kernel"
 url="https://www.kernel.org"
 depends="mkinitfs"
@@ -19,6 +19,8 @@ _config=${config:-config-lts.${CARCH}}
 install=
 source="https://cdn.kernel.org/pub/linux/kernel/v${pkgver%%.*}.x/linux-$_kernver.tar.xz
 	0001-drm-i915-gt-Detect-if-we-miss-WaIdleLiteRestore.patch
+	0002-powerpc-config-defang-gcc-check-for-stack-protector-.patch
+
 	config-lts.aarch64
 	config-lts.armv7
 	config-lts.x86
@@ -220,12 +222,13 @@ _dev() {
 }
 
 sha512sums="9f60f77e8ab972b9438ac648bed17551c8491d6585a5e85f694b2eaa4c623fbc61eb18419b2656b6795eac5deec0edaa04547fc6723fbda52256bd7f3486898f  linux-5.4.tar.xz
-dc0acb47b68c60bede649524fd7429b888df2e1aa16a93f445700d1ffacada8b870a4a75d6aeb33d0e2f2c427efbc80e24a3670c5c539e0fca5b754e7f2a4df3  0001-drm-i915-gt-Detect-if-we-miss-WaIdleLiteRestore.patch
+2d34be0a07a04db3d9c044cd188aa60b5acd15ebf04fe6e8dbfe6dca013a0790cd62ef5b02c960901e41aeb3d8f71c365b6903c496a0be6fc8b508cdc82d2c31  0001-drm-i915-gt-Detect-if-we-miss-WaIdleLiteRestore.patch
+d19365fe94431008768c96a2c88955652f70b6df6677457ee55ee95246a64fdd2c6fed9b3bef37c29075178294a7fc91f148ead636382530ebfa822be4ad8c2f  0002-powerpc-config-defang-gcc-check-for-stack-protector-.patch
 5c48a256d1adc6b1fd21538fa876e4de7f8ca773c358295ce4497b9c11c5b875db705fb9e9af2e6c00d92b35eb68118999de33711f57850a3be674eb10c421c7  config-lts.aarch64
 c2e4f6d514d151062f79132fd62b9302fa5276ad7bf363a74d58c2308eca8e10ea3fa61b6bc7126c3fe915f8786a0d72309836e3cce3ac5ed3af1abe5deae913  config-lts.armv7
 6027c14aac769ddee8d81be17c84f7f647f929ea86c7428a52d3eef6efa54887f6bc80df465bd65d9c9c45efd97a286818197738c6b6cfa2f0f9cfbe3bfa2544  config-lts.x86
 03f205f2b4a7b5307f8a117e8f3241546c35948729b9b18043d295544f5f22e7475863f8c7d86f65786425fe7fd17b4dfbb74187c8b4cf9335ef56c1a16668b2  config-lts.x86_64
-ca38fbc60fcc60cd1ed13ff52e740b092864c2114142ea5b6739d824ddcf9326461c27a534d449c7e01d904bb4ee9be535bd8ba016a6c41284e4b7c82a5332ab  config-lts.ppc64le
+1045867a211bc2f5a108b5b934ae7a5018e709b5f87a7ebbc3de5c2548728d6034d74e15870fa701ccf4acb4878b430bcb6651f21a0e48a2a78d85eddc902ee1  config-lts.ppc64le
 aa915216ff7df23a96dcb3fdcbfd618d3ceb36a96f8d4157e2add36a7ace615dac68c023174b5f18cfc38715b7e0c2e2b333976827a7baa0df3563151a14254a  config-lts.s390x
 dfd051bb14cd57b96dc64ee8a14ca86edc871d361e4c23936cc7a86afc88e27a11c2223afe4cafb120476632918c46bf407aea2de4afe3891d418927b2271bbe  config-lts.mips64
 3f2c9787b5bc94ef84458a4a688071c3bf7cdab2f199a0c5809f99e3befefb9d804040b5d6ea9963c92e286162cc9a6cd1c98ac410e31a3cf1d93233eb3557f6  config-virt.aarch64
