--- a/community/py3-wrapt/APKBUILD
+++ b/community/py3-wrapt/APKBUILD
@@ -2,8 +2,8 @@
 # Maintainer: prspkt <prspkt@protonmail.com>
 pkgname=py3-wrapt
 _pkgname=wrapt
-pkgver=1.11.2
-pkgrel=1
+pkgver=1.12.0
+pkgrel=0
 pkgdesc="Module for decorators, wrappers and monkey patching"
 url="https://github.com/GrahamDumpleton/wrapt"
 arch="all"
@@ -11,7 +11,7 @@ license="BSD-2-Clause"
 depends="python3"
 makedepends="python3-dev"
 checkdepends="py3-pytest"
-source="https://github.com/GrahamDumpleton/wrapt/archive/$pkgver/$pkgname-$pkgver.tar.gz"
+source="https://github.com/GrahamDumpleton/wrapt/archive/$pkgver/py3-wrapt-$pkgver.tar.gz"
 builddir="$srcdir/$_pkgname-$pkgver"
 
 build() {
@@ -26,4 +26,4 @@ package() {
 	python3 setup.py install --prefix=/usr --root="$pkgdir"
 }
 
-sha512sums="2551247c46fbc34068e0f2d6efa91d8c87669c8bf1e16c3b5e2e5e0d84402301c38a78485b7e9a13120c99c9c942db680a84d87a52a072d530aba6444d86297d  py3-wrapt-1.11.2.tar.gz"
+sha512sums="56a88e223dfe3d1b0f5fa01219b0a9a710d5a67cacd87d8766cf122498c47a41f4e64d2fcb0d3c939bc775893a7edcac68295754819b37ca469b301f1e98df41  py3-wrapt-1.12.0.tar.gz"
