--- a/testing/clojure/APKBUILD
+++ b/testing/clojure/APKBUILD
@@ -2,11 +2,11 @@
 # Maintainer: Will Sinatra <wpsinatra@gmail.com>
 pkgname=clojure
 pkgver=1.10.1
-pkgrel=0
+pkgrel=1
 pkgdesc="The Clojure Programming Language"
 url="http://clojure.org"
 arch="all !armv7 !armhf !x86"
-license="Apache-2.0"
+license="EPL-1.0"
 makedepends="maven"
 source="https://github.com/clojure/clojure/archive/clojure-$pkgver.tar.gz
 	clojure"
