--- a/community/openvas/APKBUILD
+++ b/community/openvas/APKBUILD
@@ -2,11 +2,11 @@
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=openvas
 pkgver=7.0.0
-pkgrel=1
+pkgrel=2
 pkgdesc="Open Vulnerability Assessment Scanner"
-url="http://www.openvas.org/"
+url="https://openvas.org/"
 arch="all"
-license="GPL-2.0"
+license="GPL-2.0-only"
 depends="redis nmap coreutils openssl util-linux"
 install="$pkgname.post-install"
 pkgusers="gvm"
@@ -15,7 +15,7 @@ makedepends="cmake bison gvm-libs-dev glib-dev libgcrypt-dev
 	doxygen xmltoman graphviz libpcap-dev gpgme-dev
 	clang-dev libssh-dev libksba-dev net-snmp-dev"
 subpackages="$pkgname-doc $pkgname-config"
-source="$pkgname-$pkgver.tar.gz::https://github.com/greenbone/$pkgname/archive/v$pkgver.tar.gz
+source="$pkgname-$pkgver.tar.gz::https://github.com/greenbone/openvas/archive/v$pkgver.tar.gz
 	greenbone-nvt-sync.cron
 	execinfo-musl-fix.patch
 	malloc-trim.patch
@@ -55,7 +55,7 @@ config() {
 	install -Dm744 "$srcdir"/greenbone-nvt-sync.cron \
 		"$subpkgdir"/etc/periodic/daily/greenbone-nvt-sync
 	install -Dm644 "$builddir"/config/redis-openvas.conf "$subpkgdir"/etc/redis-openvas.conf
-	install -Dm644 "$srcdir"/openvas-sysctl.conf "$subpkgdir"/etc/sysctl.d/02-openvas.conf 
+	install -Dm644 "$srcdir"/openvas-sysctl.conf "$subpkgdir"/usr/lib/sysctl.d/02-openvas.conf
 }
 
 sha512sums="ce3e78ce5e1575c5c37b6c2aa77ec8955754029832bafb3fcedd75b48dff309906a97bac052d206f6e93e9e72b8461a131558e849f70b3afce6280a7b06924d1  openvas-7.0.0.tar.gz
