community/libusbmuxd: upgrade to 2.0.1

--- a/community/libusbmuxd/APKBUILD
+++ b/community/libusbmuxd/APKBUILD
@@ -1,16 +1,22 @@
 # Contributor: Francesco Colista <fcolista@alpinelinux.org>
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=libusbmuxd
-pkgver=1.0.10
-pkgrel=1
+pkgver=2.0.1
+pkgrel=0
 pkgdesc="USB Multiplex Daemon"
 url="https://marcansoft.com/blog/iphonelinux/usbmuxd/"
 arch="all"
 license="LGPL-2.1-or-later"
-depends="libplist libusb"
-makedepends="libplist-dev libusb-dev"
+makedepends="libplist-dev libusb-dev automake autoconf libtool"
 subpackages="$pkgname-dev"
-source="http://www.libimobiledevice.org/downloads/libusbmuxd-$pkgver.tar.bz2"
+source="$pkgname-$pkgver.tar.gz::https://github.com/libimobiledevice/libusbmuxd/archive/$pkgver.tar.gz
+	https://github.com/libimobiledevice/libusbmuxd/commit/ed0fc222b60172417423120e925657e9346c7967.patch
+	"
+
+prepare() {
+	default_prepare
+	NOCONFIGURE=1 ./autogen.sh
+}
 
 build() {
 	./configure --prefix=/usr
@@ -22,7 +28,8 @@ check() {
 }
 
 package() {
-	make DESTDIR="${pkgdir}" install
+	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="180cde2e9d0860d07d29813e68abf8ca807f75e98424b50acfc1ce941ba4260922959e1047a7d2bc754470c08ed55d0a15c9367487bd41c635a52b4fbf8ff535  libusbmuxd-1.0.10.tar.bz2"
+sha512sums="8e185346e0e9bbc1aa69b77a9e51cc8ffda881ea57a608965e187a9288caf6e545c03c88590aa0639db76400cdcc153d50cf74241c7a3446fa29a4914fe63bf6  libusbmuxd-2.0.1.tar.gz
+26a54c022e254d5933ce7415eee18e6fe2a71d22e6ec7554f782f1484b96d4cad89caeb5d8382c47f8e78ffe6488a5ecca8906d6095f3bb07f5ae522716d797a  ed0fc222b60172417423120e925657e9346c7967.patch"
