--- a/testing/belr/APKBUILD
+++ b/testing/belr/APKBUILD
@@ -1,8 +1,7 @@
 # Contributor: Francesco Colista <fcolista@alpinelinux.org>
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
-pkgname="belr"
-pkgver="0.1.3"
-_pkgver=${pkgver}-0
+pkgname=belr
+pkgver=4.3.0
 pkgrel=0
 pkgdesc="ABNF Parser"
 url="https://www.linphone.org"
@@ -11,8 +10,7 @@ license="GPL-3.0-or-later"
 options="!check" # not test available
 makedepends="cmake bctoolbox-dev eudev-dev"
 subpackages="$pkgname-dev"
-source="https://www.linphone.org/releases/sources/${pkgname}/${pkgname}-${pkgver}.tar.gz"
-builddir="$srcdir/$pkgname-$_pkgver"
+source="$pkgname-$pkgver.tar.gz::https://github.com/BelledonneCommunications/belr/archive/$pkgver.tar.gz"
 
 build() {
 	cmake \
@@ -21,7 +19,9 @@ build() {
 		-DCMAKE_MODULE_PATH=/usr/lib/cmake \
 		-DENABLE_STRICT=NO \
 		-DENABLE_SHARED=YES \
-		-DENABLE_STATIC=NO .
+		-DENABLE_TESTS=NO \
+		-DENABLE_STATIC=NO \
+		.
 	make
 }
 
@@ -29,14 +29,4 @@ package() {
 	make DESTDIR="$pkgdir" install
 }
 
-dev()  {
-	default_dev
-	mkdir -p "$subpkgdir"/usr/lib/cmake/Belr
-	mv "$pkgdir"/usr/share/Belr/cmake/* "$subpkgdir"/usr/lib/cmake/Belr
-	# Remove empty dirs
-	rmdir "$pkgdir"/usr/share/Belr/cmake
-	rmdir "$pkgdir"/usr/share/Belr
-	rmdir "$pkgdir"/usr/share
-}
-
-sha512sums="9ce7a3d1c4de8241b6a6ba10d53483070940e4652577dd6afc63cbf850bd3ab14ff8aba6702a903eba6098cbfbd9be5e57e9690ca45fe2d50ecebf3bccf86e16  belr-0.1.3.tar.gz"
+sha512sums="868d1e922dffbe7df7b92a25aa866b793be8bcfb3e41a90f19a0772f278baa3587480d2aa7ec6c4e5491f948a67a9c4ad61610f83ab620f531eea1919ea6b3db  belr-4.3.0.tar.gz"
