testing/belcard: upgrade to 4.3.0

--- a/testing/belcard/APKBUILD
+++ b/testing/belcard/APKBUILD
@@ -1,8 +1,7 @@
 # Contributor: Francesco Colista <fcolista@alpinelinux.org>
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
-pkgname="belcard"
-pkgver="1.0.2"
-_pkgver=${pkgver}-0
+pkgname=belcard
+pkgver=4.3.0
 pkgrel=0
 pkgdesc="C++ library to manipulate VCard standard format"
 url="https://linphone.org"
@@ -11,17 +10,20 @@ license="GPL-3.0-or-later"
 options="!check" # not test available
 makedepends="cmake bctoolbox-dev belr-dev"
 subpackages="$pkgname-dev"
-source="https://www.linphone.org/releases/sources/${pkgname}/${pkgname}-${pkgver}.tar.gz"
-builddir="$srcdir/$pkgname-$_pkgver"
+source="https://www.linphone.org/releases/sources/belcard/belcard-$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://github.com/BelledonneCommunications/belcard/archive/$pkgver.tar.gz"
 
 build() {
 	cmake \
 		-DCMAKE_INSTALL_PREFIX=/usr \
 		-DCMAKE_INSTALL_LIBDIR=lib \
 		-DCMAKE_MODULE_PATH=/usr/lib/cmake \
+		-DCMAKE_INSTALL_DATADIR=lib \
 		-DENABLE_STRICT=NO \
 		-DENABLE_SHARED=YES \
-		-DENABLE_STATIC=NO .
+		-DENABLE_STATIC=NO \
+		-DENABLE_UNIT_TESTS=NO \
+		.
 	make
 }
 
@@ -29,14 +31,11 @@ package() {
 	make DESTDIR="$pkgdir" install
 }
 
-dev()  {
+dev() {
 	default_dev
-	mkdir -p "$subpkgdir"/usr/lib/cmake/Belcard
-	mv "$pkgdir"/usr/share/Belcard/cmake/* "$subpkgdir"/usr/lib/cmake/Belcard
-	# Remove empty dirs
-	rmdir "$pkgdir"/usr/share/Belcard/cmake
-	rmdir "$pkgdir"/usr/share/Belcard
-	rmdir "$pkgdir"/usr/share
+	mkdir -p "$subpkgdir"/usr/lib/cmake/belcard
+	mv "$pkgdir"/usr/share/belcard/cmake/* "$subpkgdir"/usr/lib/cmake/belcard
 }
 
-sha512sums="6b116c1f6518b5db34f49c379b25f512e70bfa0848e6b9d5d39f3836cfe4053e75f41a0219f79b5fdfd489c03745fc87c44cb1eb76b59ae1db1b3cd75ccd102e  belcard-1.0.2.tar.gz"
+
+sha512sums="d97f2912622d8713bc21e8b93252b6bcbf520afa91d17d8db78a981de1c19cb1818f3e6413b3da0bb3fc6a45fc8aa83f38fa1cea41df72e62fbb6494b3f63406  belcard-4.3.0.tar.gz"
