community/libimobiledevice: rebuild against newer libusmuxd

--- a/community/libimobiledevice/APKBUILD
+++ b/community/libimobiledevice/APKBUILD
@@ -2,14 +2,14 @@
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=libimobiledevice
 pkgver=1.2.0
-pkgrel=3
+pkgrel=4
 pkgdesc="Library that talks the protocols to support iPhone and iPod Touch devices on Linux"
 url="http://libimobiledevice.org/"
 arch="all"
 license="LGPL-2.1-or-later"
 makedepends="openssl-dev libusbmuxd-dev libplist-dev"
 subpackages="$pkgname-dev $pkgname-doc"
-source="http://libimobiledevice.org/downloads/$pkgname-$pkgver.tar.bz2
+source="http://libimobiledevice.org/downloads/libimobiledevice-$pkgver.tar.bz2
 	13bf235cac2201747de11652cf14fe2714ca0718.patch
 	02a0e03e24bc96bba2e5ea2438c30baf803fd137.patch"
 
