--- a/main/subunit/APKBUILD
+++ b/main/subunit/APKBUILD
@@ -1,21 +1,23 @@
 # Contributor: Leo <thinkabit.ukim@gmail.com>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=subunit
-pkgver=1.2.0
-pkgrel=3
+pkgver=1.3.0
+pkgrel=0
 pkgdesc="A streaming protocol for test results"
 options="!check" # Dependencies for checking stuff are in testing/
 url="https://launchpad.net/subunit"
 arch="all"
-license="Apache-2.0 BSD-3-Clause"
+license="Apache-2.0 AND BSD-3-Clause"
 depends="python3 py3-extras py3-testtools"
-makedepends="check-dev cppunit-dev perl-dev python3-dev"
-#checkdepends="py-testtools py-fixtures py-hypothesis py-testscenarios bash"
+makedepends="check-dev cppunit-dev perl-dev python3-dev automake
+	autoconf libtool"
 subpackages="$pkgname-dev $pkgname-libs"
-source="https://launchpad.net/subunit/trunk/${pkgver%.[0-9]}/+download/subunit-$pkgver.tar.gz"
+source="https://launchpad.net/subunit/trunk/${pkgver%.*}/+download/subunit-$pkgver.tar.gz"
+builddir="$srcdir"
 
 prepare() {
-	update_config_sub
+	default_prepare
+	autoreconf -fi
 }
 
 build() {
@@ -40,4 +42,4 @@ package() {
 	rm -f "$pkgdir"/usr/lib/*.a
 }
 
-sha512sums="f6559fd771ad0732985230d11a9a8326ef35c817b62d1f50dc332f0032f7b08559a46d2534983b7d3964e45682ac49b3e348581ee0983861390abcd4ec20459c  subunit-1.2.0.tar.gz"
+sha512sums="7b37890546345cc481779f4bf1dc7eeca4fbda0efff1b7d7a6ca7ec574fe72e9801b7b70b8efcb0d78bb6a0a181fcdb6e49a2ff280d73f0d3dfcd1df219b2765  subunit-1.3.0.tar.gz"
