--- a/community/xfce4-terminal/APKBUILD
+++ b/community/xfce4-terminal/APKBUILD
@@ -1,6 +1,6 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=xfce4-terminal
-pkgver=0.8.9
+pkgver=0.8.9.1
 pkgrel=0
 pkgdesc="A modern terminal emulator primarly for the Xfce desktop environment"
 url="https://xfce.org/projects/terminal/"
@@ -10,9 +10,10 @@ depends="startup-notification hicolor-icon-theme"
 makedepends="exo-dev vte3-dev libxfce4ui-dev pcre2-dev"
 replaces="terminal"
 subpackages="$pkgname-doc $pkgname-lang"
-source="https://archive.xfce.org/src/apps/xfce4-terminal/${pkgver%.*}/xfce4-terminal-$pkgver.tar.bz2"
+source="https://archive.xfce.org/src/apps/xfce4-terminal/${pkgver%.*.*}/xfce4-terminal-$pkgver.tar.bz2"
 
 build() {
+	LIBS="-lintl" \
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -28,4 +29,4 @@ package() {
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="6d3225395bcb7706bb0452a7102d5fdfa404d018909987c824ca90e4fb8765aec7ffbb6534df18020c7c9dd9c860aeca0686e755f10e1855c870ef953d857397  xfce4-terminal-0.8.9.tar.bz2"
+sha512sums="c1a68300604d1db205ac52b51dfea38031dfd92b31f7530705ac6bc875c9b4f9819bdf05bca23cbfddd87f7899488ee4dab4c897ceb96efc41a44acfc298ed22  xfce4-terminal-0.8.9.1.tar.bz2"
