--- a/main/kmod/APKBUILD
+++ b/main/kmod/APKBUILD
@@ -1,22 +1,19 @@
 # Contributor: Natanael Copa <ncopa@alpinelinux.org>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=kmod
-pkgver=26
+pkgver=27
 pkgrel=0
 pkgdesc="Linux kernel module management utilities"
 url="http://git.kernel.org/?p=utils/kernel/kmod/kmod.git;a=summary"
 arch="all"
 options="!check"  # https://bugs.gentoo.org/408915#c3
 license="GPL-2.0-or-later"
-depends=""
-depends_dev=""
 # gnu sed is needed for symlink
 makedepends_build="sed libxslt"
-makedepends_host="$depends_dev zlib-dev xz-dev"
+makedepends_host="$depends_dev zlib-dev xz-dev openssl-dev"
 makedepends="$makedepends_build $makedepends_host"
-install=""
 triggers="$pkgname.trigger=/lib/modules/*"
-subpackages="$pkgname-dev $pkgname-doc $pkgname-openrc
+subpackages="$pkgname-dev $pkgname-doc $pkgname-openrc $pkgname-libs
 	$pkgname-bash-completion:bashcomp:noarch"
 source="https://kernel.org/pub/linux/utils/kernel/kmod/kmod-$pkgver.tar.xz
 	strndupa.patch
@@ -24,7 +21,6 @@ source="https://kernel.org/pub/linux/utils/kernel/kmod/kmod-$pkgver.tar.xz
 	"
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -33,12 +29,12 @@ build() {
 		--sysconfdir=/etc \
 		--with-rootlibdir=/lib \
 		--with-zlib \
-		--with-xz
+		--with-xz \
+		--with-openssl
 	make
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 	local i
 	mkdir -p "$pkgdir"/sbin
@@ -61,7 +57,11 @@ bashcomp() {
 	mv "$pkgdir"/usr/share/bash-completion "$subpkgdir"/usr/share/
 }
 
+libs() {
+	license="LGPL-2.1-or-later"
+	default_libs
+}
 
-sha512sums="3ca276c6fc13c2dd2220ec528b8dc4ab4edee5d2b22e16b6f945c552e51f74342c01c33a53740e6af8c893d42bd4d6f629cd8fa6e15ef8bd8da30cb003ef0865  kmod-26.tar.xz
+sha512sums="e0513094935333fca1fb4c3e3493b232507a579ab00a6457cc9ed3e928363d05aad80634fb65a8287a336bf9895194c7be8ddc41bb088a6c2cca44fc1bfbdb6c  kmod-27.tar.xz
 f2ea3527bfba182c5e15557c224a5bba8c7e2ea3d21cf604e6eb2277226dcf983c3aeb9ac44a322c7f2b4942b35135da999d63a5b946b829d3f3b09c050a0f17  strndupa.patch
 7f0f89fe98167f71b7924f341ba701d001158225463c2f5e39f706a0224b1e952ee901b441f28cb15787563e83bb6e54eb752bf8669ae7c0ffbb11984542f354  kmod-static-nodes.initd"
